<resources>
    <string name="app_name">兼职GO</string>

    <!--tab-->
    <string name="tab_main">首页</string>
    <string name="tab_job">全部兼职</string>
    <string name="tab_message">信息中心</string>
    <string name="tab_personal">个人中心</string>
    <string name="tab_type">类型</string>
    <string name="tab_zone">区域</string>
    <string name="tab_sort">综合排序</string>
    <string name="tab_filter">筛选</string>
    <string name="tab_all">不限</string>
    <string name="tab_man">男</string>
    <string name="tab_woman">女</string>
    <string name="tab_morning">上午</string>
    <string name="tab_afternoon">下午</string>
    <string name="tab_evening">晚上</string>
    <string name="tab_assign">指定</string>
    <string name="tab_long">长期兼职</string>
    <string name="tab_short">短期兼职</string>
    <string name="tab_weekend">周末兼职</string>
    <string name="tab_apply_all">全部</string>
    <string name="tab_apply_signed">已报名</string>
    <string name="tab_apply_hired">已录用</string>
    <string name="tab_apply_toPost">已到岗</string>
    <string name="tab_apply_settlement">已结算</string>
    <string name="tab_collection_job">职位</string>
    <string name="tab_collection_buy">换购</string>
    <!--tab-->

    <!--menu-->
    <string name="menu_login">登录</string>
    <!--menu-->

    <!--title-->
    <string name="title_forgetPassWord">忘记密码</string>
    <string name="title_changePassWord">修改密码</string>
    <string name="title_register">注册</string>
    <string name="title_selectCity">请选择城市</string>
    <string name="title_searchJob">搜索</string>
    <string name="title_jobInfo">职位信息</string>
    <string name="title_signUp">在线报名</string>
    <string name="title_applicantList">申请人列表</string>
    <string name="title_allJobs">全部兼职</string>
    <string name="title_filter">筛选</string>
    <string name="title_myApply">我的申请</string>
    <string name="title_myCollection">我的收藏</string>
    <string name="title_myFeedBack">意见反馈</string>
    <string name="title_more">更多</string>
    <string name="title_resume">个人简历</string>
    <string name="title_auth">实名认证</string>
    <string name="title_jobIntention">求职意向设置</string>
    <string name="title_about">关于兼职GO</string>
    <string name="title_message">信息中心</string>
    <string name="title_interesting">可能感兴趣的</string>
    <string name="title_jobLine">兼职路线</string>
    <string name="title_protocol">兼职GO注册协议</string>
    <string name="title_bond">微信绑定</string>
    <string name="title_buy">兼职换购</string>
    <!--title-->

    <!--标签-->
    <string name="label_remember">记住密码</string>
    <string name="label_forget"><u>忘记密码</u></string>
    <string name="label_register">账号注册</string>
    <string name="label_looking">随便看看</string>
    <string name="label_account">账　号</string>
    <string name="label_code">验证码</string>
    <string name="label_inviteCode">邀请码</string>
    <string name="label_passWord">密　码</string>
    <string name="label_newPassWord">新密码</string>
    <string name="label_getCode">获取验证码</string>
    <string name="label_login">登录</string>
    <string name="label_agree">我已经阅读并同意</string>
    <string name="label_protocol">兼职GO用户协议</string>
    <string name="label_main1">快结兼职</string>
    <string name="label_main2">附近兼职</string>
    <string name="label_main3">实习岗位</string>
    <string name="label_main4">社会实践</string>
    <string name="label_reSet">重置</string>
    <!--标签-->

    <!--hint-->
    <string name="hint_inputTel">请输入手机号</string>
    <string name="hint_inputCode">短信验证码</string>
    <string name="hint_inputPassWord">请输入密码</string>
    <string name="hint_inputNewPassWord">请输入新密码</string>
    <string name="hint_inputInviteCode">请输入邀请码(没有可不填)</string>
    <string name="hint_inputSearchCity">请输入城市名称或首字母查询</string>
    <string name="hint_inputSearchJob">请输入您要搜索的职位</string>
    <string name="hint_inputYourInfo">请输入自己的优点，特长和上班时间等，能提高被录用几率耶</string>
    <string name="hint_inputYourEmail">请输入您的邮箱</string>
    <string name="hint_inputYourQQ">请输入QQ</string>
    <string name="hint_inputYourFeedBack">请输入您的邮反馈信息</string>
    <string name="hint_inputYourRealName">请输入真实姓名</string>
    <string name="hint_click2choose">点击选择</string>
    <string name="hint_inputYourResume">请输入自我简历,应聘会加分耶</string>
    <string name="hint_inputYourExperience">请输入工作经验,应聘会加分耶</string>
    <string name="hint_inputYourSchool">请输入学校</string>
    <string name="hint_inputYourJoinSchoolYear">请输入入学年份(例如:2010-11)</string>
    <string name="hint_inputYourIdNum">请输入身份证号码</string>
    <string name="hint_inputYourInteresting">若还有感兴趣的工作，你也可以告诉我们</string>
    <!--hint-->

    <!--btn-->
    <string name="btn_login">登录</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_register">注册</string>
    <string name="btn_submit">提交</string>
    <string name="btn_reply">回复</string>
    <string name="btn_loginFirst">请先登录</string>
    <string name="btn_bond">绑定</string>
    <!--btn-->

    <!--intent-->
    <string name="intent_value">value</string>
    <string name="intent_msg">msg</string>
    <string name="intent_msgId">msgId</string>
    <string name="intent_cateId">cateId</string>
    <string name="intent_lat">lat</string>
    <string name="intent_lng">lng</string>
    <string name="intent_wxNum">wxNum</string>
    <string name="intent_wxNickName">wxNickName</string>
    <string name="intent_wxHeadPic">wxHeadPic</string>
    <string name="intent_bundle">bundle</string>
    <!--intent-->

    <!--城市列表-->
    <string name="label_hot">热门城市</string>
    <string name="label_all">全部</string>
    <!--城市列表-->

    <!--SharedPreference-->
    <string name="sp_isRemember">isRemember</string>
    <string name="sp_isLogin">isLogin</string>
    <string name="sp_passWord">passWord</string>
    <string name="sp_phoneNum">phoneNum</string>
    <string name="sp_userId">userId</string>
    <string name="sp_nickName">nickName</string>
    <string name="sp_realName">realName</string>
    <string name="sp_idCardNum">idCardNum</string>
    <string name="sp_headPic">headPic</string>
    <string name="sp_schoolName">schoolName</string>
    <string name="sp_intoSchoolDt">intoSchoolDt</string>
    <string name="sp_idPicture">idPicture</string>
    <string name="sp_currCityId">currCityId</string>
    <string name="sp_currCity">currCity</string>
    <string name="sp_isIndex">isIndex</string>
    <string name="sp_resumeId">resumeId</string>
    <string name="sp_isAuth">isAuth</string>
    <string name="sp_isPushBind">isPushBind</string>
    <string name="sp_channelId">channelId</string>
    <!--SharedPreference-->

    <!--dialog-->
    <string name="dialog_msg">请稍后...</string>
    <string name="loading">加载中...</string>
    <string name="load_failed">加载失败</string>
    <string name="invalid_network">无效的网络</string>
    <string name="load_no_more">没有更多了</string>
    <string name="refreshing">刷新中</string>
    <!--dialog-->

    <!-- 驾车路线策略 -->
    <string-array name="driving_spinner">
        <item>躲避拥堵</item>
        <item>最短距离</item>
        <item>较少费用</item>
        <item>时间优先</item>
    </string-array>

    <!-- 换乘策略 -->
    <string-array name="transit_spinner">
        <item>不含地铁</item>
        <item>时间优先</item>
        <item>最少换乘</item>
        <item>最少步行距离</item>
    </string-array>

    <string name="base_url">http://www.jiayou9.com</string>
    <string name="btn_unCollect">取消收藏</string>
    <string name="btn_collect">收藏</string>
</resources>
