<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="18dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_weight="1"
            android:background="@null"
            android:maxLength="11"
            android:hint="@string/hint_inputTel"
            android:inputType="phone"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorVDivider" />

            <TextView
                android:id="@+id/txt_getCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="14dp"
                android:gravity="center"
                android:onClick="getCode"
                android:text="@string/label_getCode"
                android:textColor="@color/colorEditText"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="18dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_code"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_inputCode"
            android:inputType="number"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="18dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_passWord"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_passWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_inputPassWord"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="18dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_inviteCode"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_inviteCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_inputInviteCode"
            android:inputType="number"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_checkbox"
            android:button="@null"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/label_agree"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:onClick="protocol"
            android:text="@string/label_protocol"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/myButton"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="22dp"
        android:onClick="toConfirm"
        android:text="@string/btn_register" />
</LinearLayout>