<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="测试手机号"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorVDivider" />

            <TextView
                android:id="@+id/txt_getCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:onClick="getCode"
                android:text="@string/label_getCode"
                android:textColor="@color/colorEditText"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_code"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_inputCode"
            android:inputType="number"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_newPassWord"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_newPassWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_inputNewPassWord"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </LinearLayout>


    <Button
        style="@style/myButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="toConfirm"
        android:text="@string/btn_confirm" />
</LinearLayout>