<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="你的邮箱："
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/placed"
            android:background="@null"
            android:hint="@string/hint_inputYourEmail"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:text="意见反馈"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_content"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/style_edittext_introduce_myself"
            android:gravity="top"
            android:hint="@string/hint_inputYourFeedBack"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        style="@style/myButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="toSubmit"
        android:text="@string/btn_submit" />

</LinearLayout>