<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="8dp">
        <!--左边-->
        <LinearLayout
            android:id="@+id/llayout_city2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxEms="4"
                android:singleLine="true"
                android:text="贵阳"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_position" />
        </LinearLayout>
        <!--显示标题-->
        <TextView
            android:id="@+id/txt_titleBar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/title_allJobs"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <!--右边菜单按钮-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_search_white"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rbtn_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="true"
                android:drawableRight="@drawable/selector_arrow_down"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tab_type"
                android:textColor="@drawable/selector_navigation_filter_text_background"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <RadioButton
                android:id="@+id/rbtn_zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="false"
                android:drawableRight="@drawable/selector_arrow_down"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tab_zone"
                android:textColor="@drawable/selector_navigation_filter_text_background"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <RadioButton
                android:id="@+id/rbtn_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@drawable/selector_arrow_down"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tab_sort"
                android:textColor="@drawable/selector_navigation_filter_text_background"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:id="@+id/txt_toFilter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/tab_filter"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBg" />

    <include layout="@layout/fragment_universal_list" />
</LinearLayout>